<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:src="@drawable/ic_logo_school_lib" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        style="@style/customEditText"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:hint="@string/nip"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/text_medium" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_large"
        android:background="@drawable/background_border_rounded_primary_20"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:singleLine="true"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/text_medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_forget_password"
        style="@style/workSansRegular"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/forget_password"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/text_medium"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_login"
        style="@style/primaryButton"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/text_medium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/workSansRegular"
            android:text="@string/create_new_account" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_register"
            style="@style/workSansMedium"
            android:layout_marginStart="@dimen/margin_very_small"
            android:text="@string/label_daftar_sekarang"
            android:textColor="@color/neutral_40"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>