<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/book_iv"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_rounded_primary_20"
                android:scaleType="fitXY" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/workSansMedium"
                android:layout_marginTop="24dp"
                android:text="@string/judul_buku" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/judul_et"
                style="@style/customEditText"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_rounded_primary_20"
                android:hint="@string/judul_buku"
                android:minHeight="48dp"
                android:paddingStart="@dimen/margin_medium"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/margin_medium"
                android:paddingBottom="8dp"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/workSansMedium"
                android:layout_marginTop="24dp"
                android:text="@string/kategori_buku" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/kategori_et"
                style="@style/customEditText"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_rounded_primary_20"
                android:drawableEnd="@drawable/ic_down_primary"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/kategori_buku"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:singleLine="true"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/workSansMedium"
                android:layout_marginTop="24dp"
                android:text="@string/pengarang" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pengarang_et"
                style="@style/customEditText"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_rounded_primary_20"
                android:hint="@string/pengarang"
                android:minHeight="48dp"
                android:paddingStart="@dimen/margin_medium"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/margin_medium"
                android:paddingBottom="8dp"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/workSansMedium"
                android:layout_marginTop="24dp"
                android:text="@string/penerbit" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/penerbit_et"
                style="@style/customEditText"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_rounded_primary_20"
                android:hint="@string/penerbit"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:singleLine="true"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/workSansMedium"
                android:layout_marginTop="24dp"
                android:text="@string/tahun_terbit" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tahun_terbit_et"
                style="@style/customEditText"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_rounded_primary_20"
                android:hint="@string/tahun_terbit"
                android:inputType="number"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:singleLine="true"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/workSansMedium"
                android:layout_marginTop="24dp"
                android:text="@string/jumlah_halaman" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/jumlah_halaman_et"
                style="@style/customEditText"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_rounded_primary_20"
                android:hint="@string/jumlah_halaman"
                android:inputType="number"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:singleLine="true"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/workSansMedium"
                android:layout_marginTop="24dp"
                android:text="@string/isbn" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/isbn_et"
                style="@style/customEditText"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_rounded_primary_20"
                android:hint="@string/isbn"
                android:inputType="number"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:singleLine="true"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/workSansMedium"
                android:layout_marginTop="24dp"
                android:text="@string/stok" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/stock_et"
                style="@style/customEditText"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_rounded_primary_20"
                android:hint="@string/stok"
                android:inputType="number"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:singleLine="true"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_submit"
                style="@style/primaryButton"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/submit" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>