<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/customEditText"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_border_rounded_primary_20"
            android:hint="@string/email"
            android:paddingStart="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium"
            android:singleLine="true"
            android:textSize="@dimen/text_medium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nama"
            style="@style/customEditText"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_border_rounded_primary_20"
            android:hint="@string/nama"
            android:paddingStart="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium"
            android:singleLine="true"
            android:textSize="@dimen/text_medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_border_rounded_primary_20"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:singleLine="true"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/text_medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_border_rounded_primary_20"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:singleLine="true"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/text_medium" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_submit"
        style="@style/primaryButton"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_very_large"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/submit"
        android:textAllCaps="false" />
</RelativeLayout>