<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/book_iv"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_rounded_primary_20"
                android:scaleType="fitXY" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_tv"
                style="@style/workSansSemiBold"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="Habis gelap terbitlah terang"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pinjam_btn"
                    style="@style/primaryButton"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:visibility="gone"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pinjam_buku"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/peminjam_btn"
                    style="@style/primaryButton"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/daftar_pinjam"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/download_btn"
                    style="@style/primaryButton"
                    android:layout_width="0dp"
                    android:visibility="gone"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/baca_buku"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>